Sibling fixture corpus closed: 253/266, zero fixable divergences
Drove the test-corpus sweep (FixtureSweep over 215 negatives + 51
fixtures) from 221 to 253 agree. The residual 13 are exactly the
handoff's do-not-chase ordering class (11) plus the 2 quarantined
engine NPEs where lite is right. Every wire shape probed live.

Lenient-side (engine refuses, lite accepted):
- 5 required-field rows: Static port, Binding modelIncludes,
  Persistence updatesHandling/table/keys (v2 tree now runs
  validateNode: serviceOutput + target slots, CHILD_KINDS splits
  derivation kinds per milestoning arm, empty targets refuse,
  keyless target strictly {}, deleteValues STRING-only)
- 2 one-liners: Unknown database type (21-value enum javap'd from
  the 4.138.2 jar, dialect-gated so SQLite stays a lite extension);
  exec-env key space check (ServiceParseTreeWalker:787)
- Deephaven: serverUrl takes NO semicolon; [0..1] ranges refuse
  (Deephaven-only — M3-imported activators accept ranges)
- ownership pairing: UserList only in HostedService; Service DID
  pairs with identifier only; schema mapper keys closed;
  (PRIMARY_KEY|NOT_NULL)? single constraint per column

Byte diffs: diagram hide* flags FALSE==absent; dataspace Email
documentationUrl; activator function signatures render getText
(whitespace dies, quoted names keep theirs).

Missing constructs, all landed byte-exact:
- GQL full SDL (schema/directive/scalar/interface/union/enum/input)
- EmbeddedH2 (h2Embedded), Mongo include/Join parse-and-DROP, Mongo
  general auth islands (ApiKey, GCPWIFWithAWSIdP with recursive AWS
  credentials), unquoted dashed host strings, jsonSchema null
- DQ ->subType(@X); ~paramMapping + bare elementMapping legacy tail
  (fresh spanless requestParametersBuildInfo REPLACES ~request params)
- FunctionJar/HostedService walker-DROPPED blocks; HostedService
  generateLineage/storeModel wire constants; ExecutionEnvironment in
  ###HostedService; the three DeploymentConfiguration elements (SF
  dropped, BQ 